--- a/src/web.xml
+++ b/src/web.xml
@@ -6,28 +6,8 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>TomcatApplication</param-value>
     </context-param>
-    <listener>
-        <listener-class>org.springframework.boot.legacy.context.web.SpringBootContextLoaderListener</listener-class>
-    </listener>
-    <filter>
-        <filter-name>metricFilter</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>metricFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <servlet>
-        <servlet-name>appServlet</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <init-param>
-            <param-name>contextAttribute</param-name>
-            <param-value>org.springframework.web.context.WebApplicationContext.ROOT</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>appServlet</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
+   <context-param>
+        <param-name>SECURE_ENDPOINT</param-name>
+        <param-value>https://slc02ftl.us.oracle.com:8443/proxysfservice-0.1.0</param-value>
+    </context-param>
 </web-app>
