--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-legacy:1.0.2.RELEASE")
         classpath("org.springframework:spring-web:1.2.9")
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.0.RELEASE")
+        classpath("org.apache.commons:commons-io:1.3.2")
     }
 }
 
@@ -41,6 +42,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("com.sun.jersey:jersey-client:1.8")
     compile("org.codehaus.jackson:jackson-mapper-asl:1.9.13")
+    compile("org.apache.commons:commons-io:1.3.2")
     testCompile("junit:junit")
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
