--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
 war {
-    baseName = 'proxysfservice'
+    baseName = 'standardadapter'
     version = '0.1.0'
     webXml = file('src/web.xml')
 }
